--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    @font-face {
+        font-family: 'grotesk';
+        src: url('/public/SpaceGrotesk.ttf');
+    }
+}
